# breadcrumbs

./: flake.nix  pyproject.toml
breadcrumbs/: __init__.py  commands.py  config.py  configs.py  core_plugin.py  default_commands.py  default_hooks.py  default_macros_plugin.py  display.py  display_plugin.py  fun_plugin.py  future_plugin.py  hooks.py  lexer.py  loaf.py  matrics_plugin.py  metrics.py  metrics_plugin.py  notes.md  plugin.py  plugin_dir.py  root_plugin.py  test.py  top_level.py  util_plugin.py  utils.py
